tests/paczka1/small_fuzzy/11875507.err
Error in line 1: A677 A677 18,8
Error in line 6: s6opw9HeU S36 16,6
Error in line 2: A677 S36 26,4
